--- a/application/pom.xml
+++ b/application/pom.xml
@@ -39,6 +39,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.3.6</version>
+        </dependency>
     </dependencies>
 
     <build>
