--- a/application/pom.xml
+++ b/application/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>spring-rabbit</artifactId>
             <version>2.3.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.4.4</version>
+        </dependency>
     </dependencies>
 
     <build>
