--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -8,6 +8,13 @@ spring:
     ansi:
       enabled: ALWAYS
   application:
-    name: demo-core
+    name: scoreextraction-core
   bus:
     uri: ${BUS_URI:amqp://guest:guest@localhost:5672}
+  commands:
+    uri: ${MONGO_URI:mongodb://localhost:27017/events}
+  queries:
+    uri: ${MONGO_URI:mongodb://localhost:27017/views}
+logging:
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
