--- a/business/pom.xml
+++ b/business/pom.xml
@@ -50,6 +50,11 @@
             <version>2.23.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.4.4</version>
+        </dependency>
     </dependencies>
 
 
