--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
         <htmlunit.driver.version>2.52.0</htmlunit.driver.version>
+        <springboot.version>2.5.4</springboot.version>
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
