--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
   port: 8080
   origin: ${ORIGIN:*}
+
+
 spring:
   main:
     banner-mode: off
@@ -10,11 +12,11 @@ spring:
   application:
     name: scoreextraction-core
   bus:
-    uri: ${BUS_URI:amqp://guest:guest@localhost:5672}
+    uri: ${BUS_URI:amqp://bcvjbwze:WXSPv9OcvH4QLclmEwsBlb6GpH0h7ShF@moose.rmq.cloudamqp.com/bcvjbwze}
   commands:
-    uri: ${MONGO_URI:mongodb://localhost:27017/events}
+    uri: ${MONGO_URI:mongodb+srv://admin:Colombia2020.@cluster0.2pbel.mongodb.net/events?retryWrites=true&w=majority}
   queries:
-    uri: ${MONGO_URI:mongodb://localhost:27017/views}
+    uri: ${MONGO_URI:mongodb+srv://admin:Colombia2020.@cluster0.2pbel.mongodb.net/views?retryWrites=true&w=majority}
 logging:
   pattern:
     console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
