--- a/business/pom.xml
+++ b/business/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>scoreextraction</artifactId>
-        <groupId>co.com.sofka</groupId>
+        <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
     <artifactId>business</artifactId>
     <dependencies>
         <dependency>
-            <groupId>co.com.sofka</groupId>
+            <groupId>org.example</groupId>
             <artifactId>domain</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
